src/main/java/com/example/jobhunter_myself/util/error/PermissionException.java
package com.example.jobhunter_myself.util.error;

public class PermissionException extends Exception {
    public PermissionException(String message) {
        super(message);
    }

}
